<resources>
    <string name="app_name">SmartAsReborn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="activity_auth_title_welcome">Добро пожаловать!</string>
    <string name="activity_auth_enter_label">ВХОД</string>
    <string name="activity_auth_register_label">РЕГИСТРАЦИЯ</string>
    <string name="activity_auth_email_username_input">Эл. почта или имя пользователя</string>
    <string name="activity_register_email_input">Эл. почта</string>
    <string name="activity_register_username_input">Имя пользователя</string>
    <string name="activity_password_input">Пароль</string>
    <string name="activity_auth_recover_password">Восстановить пароль</string>
    <string name="activity_return_to_main_label">Вернутсья на главную</string>
    <string name="activity_main_auth_necessary">Необходимо авторизоваться, чтобы выполнять или создавать заказы</string>
    <string name="activity_recover_pass_title">Восстановление пароля</string>
    <string name="activity_recover_pass_info_label">Ведите адрес эл.почты или имя пользователя</string>
    <string name="activity_recover_pass_input_hint">Эл.почта или имя пользователя</string>
</resources>
