<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.ivan.smartasreborn.authActivities.RegisterActivity">

    <ImageView
        android:id="@+id/activity_register_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/smart_logo" />

    <TextView
        android:id="@+id/activity_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/activity_register_image"
        android:textColor="@color/mainColor"
        android:textSize="16sp"
        android:text="@string/activity_auth_title_welcome"/>

    <TextView
        android:id="@+id/activity_register_enter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/activity_auth_register_label"
        android:layout_alignBottom="@+id/activity_auth_register_label"
        android:layout_alignStart="@+id/activity_register_input_data_view_holder"
        android:text="@string/activity_auth_enter_label"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/activity_auth_register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/activity_register_input_data_view_holder"
        android:layout_alignEnd="@+id/activity_register_input_data_view_holder"
        android:text="@string/activity_auth_register_label"
        android:layout_marginRight="10dp"
        android:textColor="@color/mainColor"
        android:layout_marginBottom="16dp"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/activity_register_input_data_view_holder"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <EditText
            android:id="@+id/activity_register_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shadow_edit_text"
            android:hint="@string/activity_register_email_input"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/activity_register_username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_register_email_input"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shadow_edit_text"
            android:hint="@string/activity_register_username_input"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textSize="14sp"
             />

        <EditText
            android:id="@+id/activity_register_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_register_username_input"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/round_shadow_edit_text"
            android:hint="@string/activity_password_input"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textSize="14sp"
            />

    </RelativeLayout>

    <Button
        android:id="@+id/activity_register_enter_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@id/activity_register_return_to_main_label"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_button_main_color"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:layout_marginBottom="28dp"
        android:text="Зарегистрироваться"/>

    <TextView
        android:id="@+id/activity_register_return_to_main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/activity_return_to_main_label"/>

</RelativeLayout>
